2008-12-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/flash_strata_v2.cdl: Doh, fix doc link properly.

2008-11-23  Sergei Gavrikov  <sergei.gavrikov@gmail.com>

	* doc/strata.sgml: Fix cut'n'paste typo in example: amd->strata.

2008-11-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/flash_strata_v2.cdl: Fix doc link.

2008-11-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/flash_strata_v2.inl:
	* include/strata_v2_priv.h:
	Remove these as they are now unused and don't match the CDL.

2006-08-08  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/strata.c: Provide a default HAL_MEMORY_BARRIER()
	define if the HAL hasn't provided one.
	* src/strata_aux.c: Use HAL_MEMORY_BARRIER() any time the
	flash is switched back to read array mode. Some processors need
	to have their write buffers flushed.

2006-08-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/strata_dev.h: Replace use of flash_priv.h by flash_dev.h
	as per io/flash changes.
	* src/strata.c: Ditto.

2006-07-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/strata.c: Remove strata-specific nop devfn functions now
	provided by io/flash. Also strata_anonymizer.
	* src/strata_aux.c: Change strata_anonymizer to cyg_flash_anonymizer.

	* doc/strata.sgml: Update to reflect generic nop devfn functions
	now provided by io/flash.

2006-05-15  John Dallaway  <jld@ecoscentric.com>

	* cdl/flash_strata_v2.cdl: Add reference to package documentation.

2006-04-09  Bart Veer  <bartv@ecoscentric.com>

	* src/strata_aux.c (strata_hw_bufprogram): re-read status after
	the loop, the bits may not all change at the same time.

2006-03-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/strata_aux.c (strata_hw_erase): Workaround for
	ST M58XXXX doesn't work for parallel flash. Another
	hack put in place instead so it works not just for
	parallel flash in general, but also parallel ST M58XXXX
	should that ever be used in future.
	(strata_hw_bufprogram): count of bytes to write has to