@@ -1,3 +1,8 @@
+2009-04-21  Bart Veer  <bartv@ecoscentric.com>
+
+	* src/strata.c: Added set of parentheses around macro parameters
+	used in multiplications. Fixes 16as8 bug.
+
 2008-12-19  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/flash_strata_v2.cdl: Doh, fix doc link properly.
